# simplirtc

./: pyproject.toml
simplirtc/: __init__.py  __main__.py  auth.py  cli.py  whep.py
simplyrtc/: __main__.py  auth.py  cli.py
